<resources>
    <string name="app_name">Pokedex</string>
    <string name="HintUsuario">Usuario</string>
    <string name="greeting">Bienvenido a la pokedex!</string>
    <string name="credits">Créditos</string>
    <string name="contact">Contactar</string>
    <string name="appInfo">Estás usando la versión 1 de la Pokédex.\nEn esta aplicación podrás comprobar los datos de los pokemon que más te gustan, como por ejemplo sus tipos, descripción, movimientos, etc...</string>
    <string name="mail">agomgar180@g.educaand.es</string>
    <string name="subject">Consulta de la app Pokedex</string>
    <string name="Enter">Entrar</string>
    <string name="logo">Logo</string>
    <string name="inicio">Inicio</string>
    <string name="menu">Menú</string>
    <string name="exit">Salir</string>
    <string name="pokemon_list">Lista de pokemon</string>
    <string name="type1">Tipo 1</string>
    <string name="type2">Tipo 2</string>
    <string name="poke_image">Imagen del Pokemon</string>
    <string name="fav_list">Lista de favoritos</string>
    <string name="details">Detalles</string>
    <string name="pokemon">Pokémon</string>
    <string name="fav_details">Detalles de tus Favoritos</string>
    <string name="future_user_info">BIENVENIDO! En esta Pokedex podrás guardar tus pokemon favoritos y opinar sobre ellos, ¡Además de ver tambien las opiniones de los demás usuarios! Si necesitas modificar tus preferencias, haz click en el botón flotante situado en la parte inferior derecha de la pantalla =)</string>
    <string name="start">Comenzar</string>
    <string name="welcome">Bienvenido!</string>
    <string name="hintWelcome">¡En esta aplicación podrás consultar Pokemon y guardar tus favoritos!</string>
    <string name="no_name" translatable="false">Introduzca un nombre de usuario válido</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="id">id</string>
    <string name="no_volver_a_mostrar">No volver a mostrar Intro</string>
    <string name="error">Error en el guardado de datos</string>
    <string name="save">Guardar</string>
    <string name="settings_saves">Opciones guardadas</string>
    <string name="tus_pokemon_favoritos">Tus Pokemon favoritos</string>
    <string name="lista_de_pokemons">Lista de Pokemons</string>
    <string name="volver">Volver</string>
    <string name="delete">ELIMINAR</string>
    <string name="support_confirm_delete">¿Está seguro que desa eliminarlo?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="comentarios_de_los_usuarios">Comentarios de los Usuarios</string>
    <string name="a_adir_un_comentario">Añadir un comentario...</string>
</resources>